@@ -4,6 +4,10 @@ Changelog
 3.0b3 - unreleased
 ------------------
 
+- Also dispatch `unrestrictedSearchResults` to the Solr server.
+  https://github.com/Jarn/collective.solr/issues/5
+  [reinhardt, hannosch]
+
 - Tweak search form to better match sunburst proportions.
   [elro]
 
